Added new fontstyle and working on dynamically changing the grid.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     </head>
     <body>
         <h1>ETCH-A-SKETCH</h1>
-        <div class="button">
-            <button class="grid">Grid</button>
+        <div class="button"> Grid Selection
+            <button class="grid1">16x16</button>
+            <button class="grid2">32x32</button>
+            <button class="grid3">64x64</button>
         </div>
         
         <div id="box">
