Needs some finesse

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <body>
         <h1>ETCH-A-SKETCH</h1>
         <div class="slidecontainer">
+            <button class="button">Reset</button>
+            <button id="button">Black</button>
+            <button id="rainbow">Rainbow</button>
             <p>Custom Grid:</p>
-            <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+            <input type="range" min="1" max="100" value="10" class="slider" id="myRange">
             <p><span id="demo"></span></p>
         </div>
-        <div id="grid">
-            
+        <div id="grid">   
         </div>
     </body>
 </html>
